feat: update api

--- a/.env
+++ b/.env
@@ -8,8 +8,12 @@ LIMIT_SIZE=3145728
 EMAIL_USER=hvthuan.1810@gmail.com
 EMAIL_PASS=aslnsmklylgbdaeb
 
-MINIO_ACCESS_KEY=prdzV8bJD131Ge8n4fHL
-MINIO_SECRET_KEY=lY2vnz3VLebXVxfeC8tzzmSwLvEM17Tz7k2TaTIN
-MINIO_BUCKET
+# MINIO_ACCESS_KEY=prdzV8bJD131Ge8n4fHL
+# MINIO_SECRET_KEY=lY2vnz3VLebXVxfeC8tzzmSwLvEM17Tz7k2TaTIN
+
+
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=uploads
 MINIO_ENDPOINT=localhost
-MINIO_PORT=9001
+MINIO_PORT=9000
