--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^16.4.7",
     "eslint": "^9.22.0",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "libreoffice-convert": "^1.6.1",
     "minio": "^8.0.5",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
